<resources>
    <string name="app_name">Kimoji</string>
    <string name="network_server_connect_failed">Server connect failed!</string>
    <string name="fragment_channel_selector_title">Channel Selector</string>
    <string name="fragment_channel_selector_default">Default channel</string>
    <string name="fragment_channel_selector_default_tip">Maybe need VPN</string>
    <string name="item_channel_button">Channel %s</string>
    <string name="network_unknown_failed">Unknown failed!</string>
    <string name="fragment_sign_in_title">SIGN IN</string>
    <string name="fragment_sign_in_email">Email</string>
    <string name="fragment_sign_in_password">Password</string>
    <string name="fragment_sign_in_password_tip">Require more than 8 word</string>
    <string name="fragment_sign_in_ok">OK</string>
    <string name="view_textInput_layout_error_not_be_empty">Require not empty!</string>
    <string name="network_invalid_email_or_password">Invalid email or password!</string>
    <string name="network_unknown_response">Unknown response!</string>
    <string name="menu_action_navigate_register">Navigate register</string>
    <string name="fragment_register_title">Register</string>
    <string name="fragment_register_email">Email</string>
    <string name="fragment_register_name">Name</string>
    <string name="fragment_register_password">Password</string>
    <string name="fragment_register_question">Question</string>
    <string name="fragment_register_answer">Answer</string>
    <string name="fragment_register_birthday">Birthday</string>
    <string name="fragment_register_gender_man">Man</string>
    <string name="fragment_register_gender_woman">Woman</string>
    <string name="fragment_register_gender_other">Other</string>
    <string name="fragment_register_gender">Gender</string>
    <string name="fragment_register_safe">Safe</string>
    <string name="fragment_register_basic">Basic</string>
    <string name="fragment_register_ok">OK</string>
    <string name="activity_fatal_exception_catch_title">Fatal exception</string>
    <string name="activity_fatal_exception_catch_notice">Oops, the application crashed!</string>
    <string name="activity_fatal_exception_catch_copy">Copy</string>
    <string name="activity_fatal_exception_catch_restart">Restart</string>
    <string name="activity_fatal_exception_catch_copy_complete">Copy complete!</string>
    <string name="network_validation_error">Validation error!</string>
    <string name="view_textInput_layout_error_require_adult">Require adult!</string>
    <string name="fragment_register_birthday_tip">Require adult</string>
    <string name="network_email_is_already_exist">Email is already exist!</string>
    <string name="fragment_profile_title">Profile</string>
    <string name="fragment_category_title">Category</string>
    <string name="menu_item_homeFragment">Home</string>
    <string name="menu_item_categoryFragment">Category</string>
    <string name="menu_item_profileFragment">Profile</string>
    <string name="fragment_home_search_bar_tint">Search something?</string>
    <string name="fragment_search_empty_tip">No result</string>
    <string name="fragment_search_wait_tip">Type keyword to search</string>
    <string name="fragment_profile_exp">EXP</string>
    <string name="fragment_profile_level">LEVEL</string>
    <string name="fragment_profile_punch">PUNCH</string>
    <string name="menu_action_punch_in">Punch in</string>
    <string name="network_punch_in_success">Punch in success. <br />Last punch in day: %s</string>
    <string name="network_punch_in_failed">Already punch in!</string>
    <string name="dialog_sort_selector_radio_new">New</string>
    <string name="dialog_sort_selector_radio_old">Old</string>
    <string name="dialog_sort_selector_radio_liked">Liked</string>
    <string name="dialog_sort_selector_radio_favorite">Favorite</string>
    <string name="fragment_search_filter">Filter</string>
    <string name="dialog_sort_selector_title">Sort selector</string>
    <string name="dialog_sort_selector_radio_ok">OK</string>
    <string name="dialog_sort_selector_radio_cancel">Cancel</string>
    <string name="fragment_comic_detail_title">Comic detail</string>
    <string name="fragment_comic_detail_category">Category</string>
    <string name="fragment_comic_tag">Tag</string>
    <string name="fragment_comic_detail_read">Read</string>
    <string name="fragment_comic_detail_episode_load_more">Load more episode</string>
    <string name="fragment_comic_detail_episode">Episode</string>
</resources>