<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <import type="moe.wisteria.android.entity.IndicatorState"/>

        <variable
            name="viewModel"
            type="moe.wisteria.android.ui.fragment.signIn.SignInModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:gravity="center">

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/fragment_sign_in_indicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="@{ viewModel.indicatorState == IndicatorState.LOADING ? View.VISIBLE : View.GONE, default = gone }"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="30dp"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:gravity="center"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        style="?attr/textAppearanceTitleLarge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAllCaps="true"
                        android:textStyle="bold"
                        android:textSize="50sp"
                        android:text="@string/app_name"/>
                    <TextView
                        style="?attr/textAppearanceBodyMedium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="@string/fragment_sign_in_title"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80dp"
                    android:orientation="vertical">
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/fragment_sign_in_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/fragment_sign_in_email"
                        android:enabled="@{ viewModel.indicatorState == IndicatorState.NORMAL }"
                        app:endIconMode="clear_text">
                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:inputType="text"
                            android:text="@={ viewModel.email }"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/fragment_sign_in_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:hint="@string/fragment_sign_in_password"
                        android:enabled="@{ viewModel.indicatorState == IndicatorState.NORMAL }"
                        app:endIconMode="password_toggle"
                        app:errorEnabled="true"
                        app:helperText="@string/fragment_sign_in_password_tip">
                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLines="1"
                            android:inputType="textPassword"
                            android:text="@={ viewModel.password }"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/fragment_sign_in_ok"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="@string/fragment_sign_in_ok"
                        android:enabled="@{ viewModel.indicatorState == IndicatorState.NORMAL }"/>
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>