<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <import type="moe.wisteria.android.kimoji.entity.IndicatorState"/>

        <variable
            name="viewModel"
            type="moe.wisteria.android.kimoji.ui.fragment.comicDetail.ComicDetailModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:orientation="horizontal">
                    <com.google.android.material.card.MaterialCardView
                        style="@style/Widget.Material3.CardView.Filled"
                        android:layout_width="120dp"
                        android:layout_height="200dp">
                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <com.google.android.material.progressindicator.CircularProgressIndicator
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:indeterminate="true"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />
                            <com.google.android.material.imageview.ShapeableImageView
                                android:id="@+id/fragment_comic_detail_thumb"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:scaleType="centerCrop"/>
                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </com.google.android.material.card.MaterialCardView>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxLines="3"
                            android:text="@{ viewModel.comic.title }"
                            android:textSize="21sp" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxLines="5"
                            android:text="@{ viewModel.comic.description }"
                            android:textSize="15sp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginTop="5dp"
                            android:text="@string/fragment_comic_detail_category"/>
                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/fragment_comic_detail_category"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            tools:listitem="@layout/item_label"
                            tools:itemCount="2"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginTop="5dp"
                            android:text="@string/fragment_comic_tag"/>
                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/fragment_comic_tag"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            tools:listitem="@layout/item_label"
                            tools:itemCount="2"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp">
                    <com.google.android.material.card.MaterialCardView
                        style="@style/Widget.Material3.CardView.Filled"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="15dp"
                            android:orientation="horizontal">
                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="80dp"
                                android:layout_height="80dp">
                                <com.google.android.material.progressindicator.CircularProgressIndicator
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:indeterminate="true"
                                    app:layout_constraintBottom_toBottomOf="parent"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />
                                <com.google.android.material.imageview.ShapeableImageView
                                    android:id="@+id/fragment_comic_detail_creator_profile_image"
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:scaleType="centerCrop"
                                    android:src="@drawable/baseline_person_24"
                                    app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Full"/>
                            </androidx.constraintlayout.widget.ConstraintLayout>
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginStart="15dp"
                                android:orientation="vertical">
                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:ellipsize="end"
                                    android:maxLines="1"
                                    android:text="@{ viewModel.comic.creator.name }"
                                    android:textSize="18sp" />
                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:ellipsize="end"
                                    android:maxLines="4"
                                    android:text="@{ viewModel.comic.creator.slogan }"
                                    android:textSize="11sp" />
                            </LinearLayout>
                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>
                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="15dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/fragment_comic_detail_liked"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:button="@drawable/selection_favorite_24"
                            android:checked="@{ viewModel.comic.isLiked }"/>

                        <com.google.android.material.checkbox.MaterialCheckBox
                            android:id="@+id/fragment_comic_detail_favorite"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:button="@drawable/selection_star_24"
                            android:checked="@{ viewModel.comic.isFavourite }"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent">
                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/fragment_comic_detail_read"
                            style="@style/Widget.Material3.Button.TonalButton"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/fragment_comic_detail_read" />
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="15dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/fragment_comic_detail_episode"/>
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/fragment_comic_detail_episode_list"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="15dp"
                        tools:listitem="@layout/item_episode"
                        tools:itemCount="3"/>
                    <com.google.android.material.button.MaterialButton
                        style="@style/Widget.Material3.Button.OutlinedButton"
                        android:id="@+id/fragment_comic_detail_episode_load_more"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/fragment_comic_detail_episode_load_more"/>
                </LinearLayout>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/fragment_comic_detail_indicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="@{ viewModel.indicatorState == IndicatorState.LOADING ? View.VISIBLE : View.GONE, default = gone }"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>